<resources>
    <string name="app_name">Hyperloop</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_welcome">Welcome to our app</string>
    <string name="login_credentials_not_valid">Login credentials not valid</string>
    <string name="login_error_message_signin">Impossible to log in %s</string>
    <string name="login_error_message_signup">Impossible to register new user %s</string>
    <string name="login_notice_message_signin">User added succesfully %s</string>
    <string name="message.button.upload">Upload</string>

</resources>
